# Koishi

cli/: Cargo.toml
cli/src/: api_req.rs  global_options.rs  main.rs
cli/src/api/: cover.rs  mod.rs  request.rs  room.rs  video.rs
cli/src/cmd/: gen_id.rs  mod.rs  restricted_hash.rs
cli/src/cmd/liveroom/: create.rs  get.rs  list.rs  list_videos.rs  mod.rs
cli/src/cmd/room/: create.rs  get.rs  list.rs  list_videos.rs  mod.rs
cli/src/cmd/video/: create.rs  from_xml.rs  get.rs  import_from_xml.rs  mod.rs  restrict.rs  set_cover.rs  set_metadata.rs  upload.rs
cli/src/helpers/: cryptography.rs  mod.rs  s3.rs  se.rs  tabled.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/functions/: tsconfig.json  types.d.ts
web/functions/api/: _middleware.ts  cover.ts  room.ts
web/functions/api/room/: [room].ts
web/functions/api/room/[room]/: video.ts
web/functions/api/video/: [uuid].ts
web/functions/api/video/[uuid]/: _middleware.ts  parts.ts  restricted.ts  upload_finish.ts  upload_metadata.ts  upload_start.ts  upload_url.ts
web/functions_libs/: objects.ts  queries.ts  requests.ts  responses.ts  tsconfig.json  types.d.ts  types.ts
web/misc/: init.sql
web/src/: App.tsx  Home.tsx  Room.tsx  Video.tsx  main.tsx
web/src/components/: Cover.tsx  Error.tsx  SiteTitle.tsx
web/src/lib/: api.ts  chrono.ts  cryptography.test.ts  cryptography.ts  objects.ts  schemas.ts
