[package]
name = "koishi"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10.6"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
hex = "0.4.3"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = { version = "0.18.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v7"] }
